--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ main aside .button button {
         margin-right: 15px;
     }
 
-    main aside .size .forty-six {
+    main aside .size #46 {
         margin: 0;
     }
 
